# Exodus-Game-Bot

./: .dockerignore  .env  Database_helper.py  Dockerfile  Exodus_Game_Bot.py  Game_Catalog.py  Procfile  README.md  exodus_games.db  products.json  pyproject.toml  requirements.txt  wsgi.py
User/: .gitignore  Dockerfile  catalog.py  config.py  database.py  handlers.py  main.py  products.json  requirements.txt  utils.py
admin_dashboard/: README.md  app.py  requirements.txt  setup.sh
admin_dashboard/instance/: admin.db
admin_dashboard/src/: main.py
admin_dashboard/src/models/: database.py
admin_dashboard/src/templates/: add_category.html  add_discount.html  add_game.html  analytics.html  base.html  broadcasts.html  categories.html  client_details.html  clients.html  dashboard.html  discounts.html  edit_category.html  edit_game.html  games.html  login.html  logs.html  order_details.html  orders.html  restock_game.html  send_broadcast.html  stock.html
