[tool.poetry]
name = "exodus-game-bot"
version = "0.1.0"
description = "Telegram bot and admin dashboard for Exodus Game Store"
authors = ["Manus AI <>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.2"
Werkzeug = "~3.0.0" # Pinned for Flask 3.0 compatibility
python-telegram-bot = {version = "^20.7", extras = ["ext"]}
bcrypt = "^4.1.3"
Flask-Session = "^0.6.0"
whitenoise = "^6.6.0"
gunicorn = "^22.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

